--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Koen Schmeets",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^8.0.54"
+    "@types/node": "^8.0.54",
+    "typescript": "^2.6.2"
   },
   "dependencies": {
     "browserify": "^14.5.0",
